; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/mm/extr_memcontrol.c_mem_cgroup_remove_exceeded.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/mm/extr_memcontrol.c_mem_cgroup_remove_exceeded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem_cgroup = type { i32 }
%struct.mem_cgroup_per_zone = type { i32 }
%struct.mem_cgroup_tree_per_zone = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mem_cgroup*, %struct.mem_cgroup_per_zone*, %struct.mem_cgroup_tree_per_zone*)* @mem_cgroup_remove_exceeded to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mem_cgroup_remove_exceeded(%struct.mem_cgroup* %0, %struct.mem_cgroup_per_zone* %1, %struct.mem_cgroup_tree_per_zone* %2) #0 {
  %4 = alloca %struct.mem_cgroup*, align 8
  %5 = alloca %struct.mem_cgroup_per_zone*, align 8
  %6 = alloca %struct.mem_cgroup_tree_per_zone*, align 8
  store %struct.mem_cgroup* %0, %struct.mem_cgroup** %4, align 8
  store %struct.mem_cgroup_per_zone* %1, %struct.mem_cgroup_per_zone** %5, align 8
  store %struct.mem_cgroup_tree_per_zone* %2, %struct.mem_cgroup_tree_per_zone** %6, align 8
  %7 = load %struct.mem_cgroup_tree_per_zone*, %struct.mem_cgroup_tree_per_zone** %6, align 8
  %8 = getelementptr inbounds %struct.mem_cgroup_tree_per_zone, %struct.mem_cgroup_tree_per_zone* %7, i32 0, i32 0
  %9 = call i32 @spin_lock(i32* %8)
  %10 = load %struct.mem_cgroup*, %struct.mem_cgroup** %4, align 8
  %11 = load %struct.mem_cgroup_per_zone*, %struct.mem_cgroup_per_zone** %5, align 8
  %12 = load %struct.mem_cgroup_tree_per_zone*, %struct.mem_cgroup_tree_per_zone** %6, align 8
  %13 = call i32 @__mem_cgroup_remove_exceeded(%struct.mem_cgroup* %10, %struct.mem_cgroup_per_zone* %11, %struct.mem_cgroup_tree_per_zone* %12)
  %14 = load %struct.mem_cgroup_tree_per_zone*, %struct.mem_cgroup_tree_per_zone** %6, align 8
  %15 = getelementptr inbounds %struct.mem_cgroup_tree_per_zone, %struct.mem_cgroup_tree_per_zone* %14, i32 0, i32 0
  %16 = call i32 @spin_unlock(i32* %15)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @__mem_cgroup_remove_exceeded(%struct.mem_cgroup*, %struct.mem_cgroup_per_zone*, %struct.mem_cgroup_tree_per_zone*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
